# CmakeTutorial

cmaketutorial1/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cpp
cmaketutorial1/MathFunctions/: mysqrt.cpp
cmaketutorial2/: CMakeLists.txt  tutorial.cpp
cmaketutorial2/MathFunctions/: mathfunctions.h  mysqrt.cpp
